fabrik/internal/engine/testdata/jobs_worker_dup.txt
Only one //fabrik:jobs:worker is allowed per app.
-- go.mod --
module app

go 1.26

require github.com/gofabrik/fabrik/jobs v0.0.0

replace github.com/gofabrik/fabrik/jobs => JOBSDIR
-- main.go --
package main

func main() {
	if err := run(); err != nil {
		panic(err)
	}
}
-- shared/shared.go --
package shared

import (
	"context"

	"github.com/gofabrik/fabrik/jobs"
)

//fabrik:provider
func NewJobStore() (jobs.Store, error) { return jobs.NewMemoryStore(), nil }

type Welcome struct{ UserID int64 }

//fabrik:job
func SendWelcome(ctx context.Context, m Welcome) error { return nil }

//fabrik:jobs:worker
func Worker() jobs.RuntimeConfig {
	return jobs.RuntimeConfig{Worker: jobs.WorkerConfig{Concurrency: 2}, RunScheduler: true}
}

//fabrik:jobs:worker
func OtherWorker() jobs.RuntimeConfig {
	return jobs.RuntimeConfig{Worker: jobs.WorkerConfig{Concurrency: 1}}
}
-- want/diags --
error: shared/shared.go:22:1: duplicate //fabrik:jobs:worker
  help: first declared at $WORK/shared/shared.go:17:1
